# property_example

./: CMakeLists.txt  README.md  main.cpp  property.hpp
config/: demokit_config.json
